Backport of new 1.21 features